--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2",
-    "puppeteer": "^24.6.0"
+    "express": "^4.21.2",
+    "puppeteer": "^24.6.0",
+    "puppeteer-core": "^24.6.0"
   }
 }
