--- a/package.json
+++ b/package.json
@@ -1,18 +1,12 @@
 {
   "name": "url_resolver_server",
   "version": "1.0.0",
-  "description": "Resolve shortened URLs to their final destination",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
-    "postinstall": "npx puppeteer install"
+    "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.21.2",
-    "puppeteer": "^24.6.0",
-    "puppeteer-core": "^24.6.0"
+    "express": "^4.18.2",
+    "puppeteer": "^22.8.2"
   }
 }
