--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "dotenv": "^16.4.7",
     "express": "^4.18.2",
     "puppeteer": "^24.6.0"
   }
